--- a/charts/nodejs/templates/deployment.yaml
+++ b/charts/nodejs/templates/deployment.yaml
@@ -3,10 +3,10 @@ apiVersion: {{ default "apps/v1" .Values.deploymentApiVersion }}
 kind: Deployment
 
 metadata:
-  name: {{ template "appname_with_ref" . }}
+  name: {{ template "appname" . }}
   labels:
     app: {{ template "appname" . }}
-    ref: "{{ .Values.biomageCi.ref }}"
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
     release: {{ .Release.Name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     heritage: {{ .Release.Service }}
@@ -16,7 +16,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "appname" . }}
-      ref: "{{ .Values.biomageCi.ref }}"
+      sandboxId: "{{ .Values.biomageCi.sandboxId }}"
       release: {{ .Release.Name }}
 
   replicas: {{ .Values.replicaCount }}
@@ -34,7 +34,7 @@ spec:
 {{- end }}
       labels:
         app: {{ template "appname" . }}
-        ref: "{{ .Values.biomageCi.ref }}"
+        sandboxId: "{{ .Values.biomageCi.sandboxId }}"
         release: {{ .Release.Name }}
 
     spec:
@@ -57,6 +57,9 @@ spec:
         - name: K8S_ENV
           value: {{ .Values.kubernetes.env | quote }}
         
+        - name: SANDBOX_ID
+          value: {{ .Values.biomageCi.sandboxId | quote }}
+
         ports:
         - name: "{{ .Values.service.name }}"
           containerPort: {{ .Values.service.internalPort }}
