--- a/cf/sns.yaml
+++ b/cf/sns.yaml
@@ -10,6 +10,10 @@ Parameters:
       - staging
       - production
     Description: The environment for which the SNS topic needs to be created.
+  SandboxID:
+    Type: String
+    Default: default
+    Description: The sandbox ID of the environment that this topic is created for.
 
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
@@ -20,9 +24,23 @@ Resources:
     Type: AWS::SNS::Topic
     Properties: 
       KmsMasterKeyId: "alias/aws/sns"
-      Subscription: 
-        - Endpoint: !If [isProd, "https://api.scp.biomage.net/v1/workResults",
-                    !If [isDev, "http://host.docker.internal:3000/v1/workResults",
-                     !Sub "https://api.scp-${Environment}.biomage.net/v1/workResults"]]
-          Protocol: "https"
-      TopicName: !Sub "work-results-${Environment}"
+      TopicName: !Sub "work-results-${Environment}-${SandboxID}"
+  WorkResultsSubscription:
+    Type: 'AWS::SNS::Subscription'
+    Properties:
+      TopicArn: !Ref SNSTopic
+      Endpoint: !If [isProd, "https://api.scp.biomage.net/v1/workResults",
+                !If [isDev, "http://host.docker.internal:3000/v1/workResults",
+                !Sub "https://api-${SandboxID}.scp-${Environment}.biomage.net/v1/workResults"]]
+      Protocol: "https"
+      DeliveryPolicy:
+        healthyRetryPolicy:
+          minDelayTarget: 10
+          maxDelayTarget: 30
+          numRetries: 50
+          numNoDelayRetries: 0
+          numMinDelayRetries: 2
+          numMaxDelayRetries: 10
+          backoffFunction: exponential
+
+  
