--- a/charts/nodejs/templates/hpa.yaml
+++ b/charts/nodejs/templates/hpa.yaml
@@ -8,6 +8,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
 spec:
   scaleTargetRef:
     kind: Deployment
