--- a/charts/nodejs/templates/ingress.yaml
+++ b/charts/nodejs/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.service.enabled) (eq .Values.biomageCi.ref "refs-heads-master") -}}
+{{- if .Values.service.enabled -}}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 
@@ -9,6 +9,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version| replace "+" "_" }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
 
   annotations:
 {{- if .Values.ingress.annotations }}
@@ -48,7 +49,7 @@ spec:
 {{- end }}
 {{- end }}
   rules:
-  - host: {{ printf "%s.scp.biomage.net" (split "/" .Values.biomageCi.repo)._1 }}
+  - host: {{ template "hostname" . }}
     http:
       &httpRule
       paths:
