--- a/charts/nodejs/templates/service.yaml
+++ b/charts/nodejs/templates/service.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.service.enabled) (eq .Values.biomageCi.ref "refs-heads-master") -}}
+{{- if .Values.service.enabled -}}
 apiVersion: v1
 kind: Service
 
@@ -17,6 +17,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
 
 spec:
   type: {{ .Values.service.type }}
@@ -29,6 +30,6 @@ spec:
 
   selector:
     app: {{ template "appname" . }}
-    ref: "{{ .Values.biomageCi.ref }}"
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
     release: {{ .Release.Name }}
 {{- end -}}
