--- a/charts/worker-instance.yaml
+++ b/charts/worker-instance.yaml
@@ -1,8 +1,9 @@
 experimentId: FILLED_IN_BY_API
 workQueueName: FILLED_IN_BY_API
 clusterEnv: FILLED_IN_BY_API
+sandboxId: FILLED_IN_BY_API
 storageSize: FILLED_IN_BY_API
-namespace: worker-refs-heads-master
+namespace: worker-default
 images:
-  python: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-57f1d716caec84180cf59dc233e93b17f5c06ad4-python
-  r: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-57f1d716caec84180cf59dc233e93b17f5c06ad4-r
+  python: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-cd1f492ec3bb2def4ae4c0d8f2f1ec57713c1037-python
+  r: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-cd1f492ec3bb2def4ae4c0d8f2f1ec57713c1037-r
