--- a/releases/staging-candidates/api/refs-heads-master.yaml
+++ b/releases/staging-candidates/api/refs-heads-master.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: api-default
+  name: api-STAGING_SANDBOX_ID
   labels:
-    sandboxId: default
+    sandboxId: STAGING_SANDBOX_ID
 ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: api
-  namespace: api-default
+  namespace: api-STAGING_SANDBOX_ID
   labels:
-    sandboxId: default
+    sandboxId: STAGING_SANDBOX_ID
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/chart-image: glob:refs-heads-master-*
@@ -20,7 +20,7 @@ spec:
   chart:
     git: git@github.com:biomage-ltd/iac
     path: charts/nodejs
-    ref: master
+    ref: STAGING_CHART_REF
   values:
     service:
       externalPort: 3000
@@ -30,15 +30,15 @@ spec:
     livenessProbe:
       path: "/v1/health"
     kubernetes:
-      env: production
+      env: staging
     biomageCi:
       repo: biomage-ltd/api
-      sandboxId: default
+      sandboxId: STAGING_SANDBOX_ID
     image:
       registry: 242905224710.dkr.ecr.eu-west-1.amazonaws.com
       repository: api
       tag: refs-heads-master-313757349c916d87a758da8587a5bbec2d147607
     serviceAccount:
-      iamRole: arn:aws:iam::242905224710:role/api-role-production
+      iamRole: arn:aws:iam::242905224710:role/api-role-staging
 
 # filled in by CI. do not modify.
