--- a/releases/staging-candidates/worker/refs-heads-master.yaml
+++ b/releases/staging-candidates/worker/refs-heads-master.yaml
@@ -1,22 +1,21 @@
----
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: worker-default
+  name: worker-STAGING_SANDBOX_ID
   labels:
-    sandboxId: default
+    sandboxId: STAGING_SANDBOX_ID
 ---
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: worker
-  namespace: worker-default
+  namespace: worker-STAGING_SANDBOX_ID
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/r: glob:refs-heads-master-*-r
     filter.fluxcd.io/python: glob:refs-heads-master-*-python
   labels:
-    sandboxId: default
+    sandboxId: STAGING_SANDBOX_ID
 spec:
   releaseName: worker
   chart:
@@ -25,9 +24,9 @@ spec:
     ref: 3ce902eba2d786c9f3d53285d97490814d926277
   values:
     serviceAccount:
-      iamRole: arn:aws:iam::242905224710:role/worker-role-production
-    sandboxId: default
+      iamRole: arn:aws:iam::242905224710:role/worker-role-staging
+    sandboxId: STAGING_SANDBOX_ID
     r:
-      image: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-2c9d80747530c18f38ec0a7c03376d28333b99dd-r
+      image: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-3ce902eba2d786c9f3d53285d97490814d926277-r
     python:
-      image: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-2c9d80747530c18f38ec0a7c03376d28333b99dd-python
+      image: 242905224710.dkr.ecr.eu-west-1.amazonaws.com/worker:refs-heads-master-3ce902eba2d786c9f3d53285d97490814d926277-python
