--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -14,7 +14,7 @@ Resources:
       EnableKeyRotation: true
       Enabled: true
       KeyPolicy:
-        Version: '2012-10-17'
+        Version: '"2012-10-17"'
         Id: iac-secrets-key-policy
         Statement:
         - Sid: enable-root-management
