--- a/.ci.yaml
+++ b/.ci.yaml
@@ -1,7 +1,7 @@
 ci-policies:
     - PolicyName: "admin-access"
       PolicyDocument:
-        Version: 2012-10-17
+        Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Action:
