--- a/.github/workflows/remove-staging.yaml
+++ b/.github/workflows/remove-staging.yaml
@@ -24,7 +24,9 @@ jobs:
       
       - id: install-aws-cli
         name: Install AWS CLI
-        uses: chrislennon/action-aws-cli@v1.1
+        uses: unfor19/install-aws-cli-action@v1
+        with:
+          version: 2
 
       - id: decrypt-secrets
         name: Decrypt credentials from user.
