--- a/charts/nodejs/templates/kubernetes-event-exporter.yaml
+++ b/charts/nodejs/templates/kubernetes-event-exporter.yaml
@@ -1,34 +1,34 @@
 # the event export should be deployed only once per cluster, ie. as part of the default sandbox of the api repo
-{{ if and (contains "api" .Values.biomageCi.repo) (eq .Values.biomageCi.sandboxId "default") }}
+{{ if and (contains "api" .Values.biomageCi.repo) (eq .Values.biomageCi.sandboxId "grasp6-test-chart") }}
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: monitoring
+  name: monitoring-tests
 ---
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  namespace: monitoring
-  name: event-exporter
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: event-exporter
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: view
-subjects:
-  - kind: ServiceAccount
-    namespace: monitoring
-    name: event-exporter
----
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   namespace: monitoring
+#   name: event-exporter
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: event-exporter
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: view
+# subjects:
+#   - kind: ServiceAccount
+#     namespace: monitoring
+#     name: event-exporter
+# ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: event-exporter-cfg
-  namespace: monitoring
+  name: event-exporter-cfg-grasp-test
+  namespace: monitoring-tests
 data:
   config.yaml: |
     logLevel: info
@@ -45,36 +45,36 @@ data:
           endpoint: https://{{ template "hostname" .}}/v2/kubernetesEvents
           headers:
             User-Agent: kube-event-exporter 1.0
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: event-exporter
-  namespace: monitoring
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: event-exporter
-        version: v1
-    spec:
-      serviceAccountName: event-exporter
-      containers:
-        - name: event-exporter
-          image: ghcr.io/opsgenie/kubernetes-event-exporter:v0.11
-          imagePullPolicy: IfNotPresent
-          args:
-            - -conf=/data/config.yaml
-          volumeMounts:
-            - mountPath: /data
-              name: cfg
-      volumes:
-        - name: cfg
-          configMap:
-            name: event-exporter-cfg
-  selector:
-    matchLabels:
-      app: event-exporter
-      version: v1
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: event-exporter
+#   namespace: monitoring
+# spec:
+#   replicas: 1
+#   template:
+#     metadata:
+#       labels:
+#         app: event-exporter
+#         version: v1
+#     spec:
+#       serviceAccountName: event-exporter
+#       containers:
+#         - name: event-exporter
+#           image: ghcr.io/opsgenie/kubernetes-event-exporter:v0.11
+#           imagePullPolicy: IfNotPresent
+#           args:
+#             - -conf=/data/config.yaml
+#           volumeMounts:
+#             - mountPath: /data
+#               name: cfg
+#       volumes:
+#         - name: cfg
+#           configMap:
+#             name: event-exporter-cfg
+#   selector:
+#     matchLabels:
+#       app: event-exporter
+#       version: v1
 {{ end }}
