--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -305,7 +305,7 @@ jobs:
         with:
           source_file: ./releases/staging/${{ github.event.inputs.sandbox-id }}.yaml
           destination_repo: ${{ github.repository_owner }}/releases
-          destination_folder: staging/${{ github.event.inputs.sandbox-id }}.yaml
+          destination_folder: staging
           user_email: ci@biomage.net
           user_name: 'Biomage CI/CD'
 
