--- a/cf/irsa-pipeline-role.yaml
+++ b/cf/irsa-pipeline-role.yaml
@@ -20,6 +20,7 @@ Resources:
     Type: "AWS::IAM::Role"
     Properties:
       RoleName: !Sub "pipeline-role-${Environment}"
+      MaxSessionDuration: 10800
       AssumeRolePolicyDocument:
         Fn::Sub: |-
           {
