--- a/releases/staging/ivababukova-droopy-corgi.yaml
+++ b/releases/staging/ivababukova-droopy-corgi.yaml
@@ -19,7 +19,7 @@ spec:
   chart:
     git: https://github.com/hms-dbmi-cellenics/iac
     path: charts/nodejs
-    ref: 74811469a6f92b8eaf12e324020a0aa24aab293d
+    ref: refs/heads/master
   releaseName: ui
   values:
     biomageCi:
@@ -73,7 +73,7 @@ spec:
   chart:
     git: https://github.com/hms-dbmi-cellenics/iac
     path: charts/nodejs
-    ref: 74811469a6f92b8eaf12e324020a0aa24aab293d
+    ref: refs/heads/master
   releaseName: api
   values:
     biomageCi:
@@ -132,7 +132,7 @@ spec:
   chart:
     git: https://github.com/hms-dbmi-cellenics/worker
     path: chart-infra/
-    ref: 9eb9f9823e0c194384a207c56ffcc487873a481a
+    ref: refs/heads/master
   releaseName: worker
   values:
     kubernetes:
@@ -173,7 +173,7 @@ spec:
   chart:
     git: https://github.com/hms-dbmi-cellenics/pipeline
     path: chart-infra/
-    ref: be5c36f3f6c30bf8344c2cf3a38f2b6959c777cb
+    ref: refs/heads/master
   releaseName: pipeline
   values:
     clusterEnv: staging
