add a custom env var to make sure that chart is pulled correctly

--- a/charts/nodejs/templates/deployment.yaml
+++ b/charts/nodejs/templates/deployment.yaml
@@ -54,6 +54,9 @@ spec:
         {{- end }}
 
         env:
+        - name: IVA
+          value: testifeverythingisok
+
         - name: K8S_ENV
           value: {{ .Values.kubernetes.env | quote }}
 
