--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -307,3 +307,12 @@ jobs:
             --parameters "commands='$SETUP_ROLES_CMD'"
         env:
           REGION: ${{ env.region }}
+
+  job: report-if-failed
+  needs: [setup, get-modified-templates, lint-templates, deploy-templates, setup-rds-roles]
+  if: failure()
+  steps:
+    - id: test
+      name: Test if job will run on failure
+      run: |
+        echo "Failure"
