put a wrong env and expect secrets fetching to fail

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - env-name: Biomage
+          - env-name: blablabalbal
             type: staging
           - env-name: Biomage
             type: production
