--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -102,7 +102,7 @@ jobs:
     name: Create EKS cluster
     runs-on: ubuntu-20.04
     needs: setup
-    # if: github.event.inputs.workflow_actions == 'deploy and configure'
+    if: github.event.inputs.workflow_actions == 'deploy and configure'
     strategy:
       matrix:
         include:
