--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -105,9 +105,8 @@ jobs:
     # if: github.event.inputs.workflow_actions == 'deploy and configure'
     strategy:
       matrix:
-        include:
-          - env-name: Biomage
-            env-type: ${{ needs.setup.outputs.matrix }}
+        env-type: ${{ needs.setup.outputs.matrix }}
+        env-name: [Biomage]
     # env:
     #   CLUSTER_ENV: ${{ matrix.env-type }}
     steps:
