it works, now try to constrain env to be only to staging

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -108,6 +108,9 @@ jobs:
         # env-type: ${{ needs.setup.outputs.matrix }}
         env-type: [staging, production]
         env-name: [Biomage]
+        include:
+          - env-name: HMS
+            env-type: production
     # env:
     #   CLUSTER_ENV: ${{ matrix.env-type }}
     steps:
